--- a/app/views/static_pages/_geospatial_dashboard_js.html.erb
+++ b/app/views/static_pages/_geospatial_dashboard_js.html.erb
@@ -671,7 +671,7 @@ function drawProject(microProjectData, r){
     }
     $('#projectPage').append("<hr>")
     $('#projectPage').append("<b>Comment</b>")
-    $('#projectPage').append("<form onchange='validate(this)' accept-charset='UTF-8' action='/comments' data-remote='true' id='post_comment' method='post'><div style='margin:0;padding:0;display:inline'><input name='utf8' type='hidden' value='✓'><input name='definitely_came_from_web_form' type='hidden' value='true'><input name='[comment][geometry]latitude' type='hidden'><input name='[comment][geometry]longitude' type='hidden'><input name='[comment]geocode_id' type='hidden'><input name='[comment][base64_media_item]content_type' type='hidden'><input name='[comment][base64_media_item]original_filename' type='hidden'><input name='[comment][base64_media_item]media_data' type='hidden'><input name='[comment]project_id' type='hidden' value='"+project.id+"'></div><input class='post_comment' name='[comment]name' required='true' placeholder='*Name' type='text' style='float:left;width:50%'><input class='post_comment' name='[comment]email' required='true' placeholder='*Email' type='text' style='float:left;width:50%'><input class='post_comment' name='latlng' onchange='mapLatLon()' placeholder='Lat, Long' type='text' style='float:left;width:66%;'><button type='button' onclick='getLatLon()' style='float:left;width:33%;padding:0px !important;line-height:1 !important;min-height:30px;position:relative;top:2px;'>Get from map</button><textarea rows=3 class='post_comment' name='comment[content]' required='true' placeholder='*Type your comment here...' style='float:left;width:100%;'></textarea><div style='height:36px;float:left;width:30%;line-height:36px;'><span style='font-weight:bold;vertical-align:middle;display:inline-block;line-height:1;'>Attach media:</span></div><input class='post_comment' name='[comment]media' id='commentmediaupload' type='file' accept='image/*,video/*' style='float:left;width:70%;'><input class='post_comment' style='float:left;width:6%;' type='checkbox' required='true' id='terms_and_conditions'><label style='float:left;width:60%;'>I accept the <a href='http://aiddata.org/disclaimer-and-license' target='_blank'>terms and conditions</a>.</label><button type='button' id='submit' disabled='disabled' style='float:right;width:33%;height:30px;' onclick='submitComment()'>Submit</button></form>")
+    $('#projectPage').append("<form onchange='validate(this)' accept-charset='UTF-8' action='/comments' data-remote='true' id='post_comment' method='post'><div style='margin:0;padding:0;display:inline'><input name='utf8' type='hidden' value='✓'><input name='definitely_came_from_web_form' type='hidden' value='true'><input name='[geometry]latitude' type='hidden'><input name='[geometry]longitude' type='hidden'><input name='[comment]geocode_id' type='hidden'><input name='[base64_media_item]content_type' type='hidden'><input name='[base64_media_item]original_filename' type='hidden'><input name='[base64_media_item]media_data' type='hidden'><input name='[comment]project_id' type='hidden' value='"+project.id+"'></div><input class='post_comment' name='[comment]name' required='true' placeholder='*Name' type='text' style='float:left;width:50%'><input class='post_comment' name='[comment]email' required='true' placeholder='*Email' type='text' style='float:left;width:50%'><input class='post_comment' name='latlng' onchange='mapLatLon()' placeholder='Lat, Long' type='text' style='float:left;width:66%;'><button type='button' onclick='getLatLon()' style='float:left;width:33%;padding:0px !important;line-height:1 !important;min-height:30px;position:relative;top:2px;'>Get from map</button><textarea rows=3 class='post_comment' name='comment[content]' required='true' placeholder='*Type your comment here...' style='float:left;width:100%;'></textarea><div style='height:36px;float:left;width:30%;line-height:36px;'><span style='font-weight:bold;vertical-align:middle;display:inline-block;line-height:1;'>Attach media:</span></div><input class='post_comment' name='[comment]media' id='commentmediaupload' type='file' accept='image/*,video/*' style='float:left;width:70%;'><input class='post_comment' style='float:left;width:6%;' type='checkbox' required='true' id='terms_and_conditions'><label style='float:left;width:60%;'>I accept the <a href='http://aiddata.org/disclaimer-and-license' target='_blank'>terms and conditions</a>.</label><button type='button' id='submit' disabled='disabled' style='float:right;width:33%;height:30px;' onclick='submitComment()'>Submit</button></form>")
 //Event Listener for file change
     commentFiles = [];
     $("#post_comment input[type=file]").change(function(event) {
@@ -719,8 +719,8 @@ function mapLatLon(){
         var lat=parseFloat(latlng[0]),
                 lng = parseFloat(latlng[1]);
         if(typeof(lat)=="number" && typeof(lng)=="number" && lat>=-90 && lat<=90 && lng>=-180 && lng<=180) {
-            $("input[name = '[comment][geometry]latitude']").val(lat)
-            $("input[name = '[comment][geometry]longitude']").val(lng)
+            $("input[name = '[geometry]latitude']").val(lat)
+            $("input[name = '[geometry]longitude']").val(lng)
             $("input[name = '[comment]geocode_id']").val(undefined)
             if (map.hasLayer(newComment)) {
                 map.removeLayer(newComment)
@@ -755,8 +755,8 @@ function getLatLonEventsOff(){
 singleEventFunc = function(e){
     var lat = e.latlng.lat,
             lng = e.latlng.lng;
-    $("input[name = '[comment][geometry]latitude']").val(lat)
-    $("input[name = '[comment][geometry]longitude']").val(lng)
+    $("input[name = '[geometry]latitude']").val(lat)
+    $("input[name = '[geometry]longitude']").val(lng)
     $("input[name = 'latlng']").val(lat.toFixed(4)+", "+lng.toFixed(4))
     $("input[name = '[comment]geocode_id']").removeAttr("value")
     if(map.hasLayer(newComment)){
@@ -769,8 +769,8 @@ singleEventFunc = function(e){
 singleGeocodeEventFunc = function(e){
     var lat = e.layer._latlng.lat,
             lng = e.layer._latlng.lng;
-    $("input[name = '[comment][geometry]latitude']").val(lat)
-    $("input[name = '[comment][geometry]longitude']").val(lng)
+    $("input[name = '[geometry]latitude']").val(lat)
+    $("input[name = '[geometry]longitude']").val(lng)
     $("input[name = 'latlng']").val(lat.toFixed(4)+", "+lng.toFixed(4))
     $("input[name = '[comment]geocode_id']").val(e.layer.properties.geo_code_id)
     if(map.hasLayer(newComment)){
@@ -785,8 +785,8 @@ clusterEventFunc = function(e){
     clusterEvent.latlng = map.mouseEventToLatLng(e.originalEvent)
     var lat = clusterEvent.latlng.lat,
             lng = clusterEvent.latlng.lng;
-    $("input[name = '[comment][geometry]latitude']").val(lat)
-    $("input[name = '[comment][geometry]longitude']").val(lng)
+    $("input[name = '[geometry]latitude']").val(lat)
+    $("input[name = '[geometry]longitude']").val(lng)
     $("input[name = 'latlng']").val(lat.toFixed(4)+", "+lng.toFixed(4))
     $("input[name = '[comment]geocode_id']").removeAttr("value")
     if(map.hasLayer(newComment)){
@@ -991,8 +991,8 @@ function openRightClickMarkers(e){
                 function(){
                     var lat = e.layer._latlng.lat,
                             lng = e.layer._latlng.lng;
-                    $("form#post_comment input[name = '[comment][geometry]latitude']").val(lat)
-                    $("form#post_comment input[name = '[comment][geometry]longitude']").val(lng)
+                    $("form#post_comment input[name = '[geometry]latitude']").val(lat)
+                    $("form#post_comment input[name = '[geometry]longitude']").val(lng)
                     $("form#post_comment input[name = 'latlng']").val(lat.toFixed(4)+", "+lng.toFixed(4))
                     $("form#post_comment input[name = '[comment]geocode_id']").val(e.layer.properties.geo_code_id)
                     if(map.hasLayer(newComment)){
@@ -1010,8 +1010,8 @@ function openRightClickMarkers(e){
         map.removeLayer(dropdown);
         var lat = e.layer._latlng.lat,
                 lng = e.layer._latlng.lng;
-        $("form#post_comment input[name = '[comment][geometry]latitude']").val(lat)
-        $("form#post_comment input[name = '[comment][geometry]longitude']").val(lng)
+        $("form#post_comment input[name = '[geometry]latitude']").val(lat)
+        $("form#post_comment input[name = '[geometry]longitude']").val(lng)
         $("form#post_comment input[name = 'latlng']").val(lat.toFixed(4)+", "+lng.toFixed(4))
         $("form#post_comment input[name = '[comment]geocode_id']").val(e.layer.properties.geo_code_id)
         if(map.hasLayer(newComment)){
@@ -1099,9 +1099,9 @@ function submitComment(){
     $.each(commentFiles, function(index, file) {
         if(file.size<10000000 && file.type.substr(0,5)=="image" || file.type.substr(0,5)=="video"){
             $("#post_comment input[type = 'file']").val("")
-            $("#post_comment input[name = '[comment][base64_media_item]content_type']").val(file.type)
-            $("#post_comment input[name = '[comment][base64_media_item]original_filename']").val(file.filename)
-            $("#post_comment input[name = '[comment][base64_media_item]media_data']").val(file.data)
+            $("#post_comment input[name = '[base64_media_item]content_type']").val(file.type)
+            $("#post_comment input[name = '[base64_media_item]original_filename']").val(file.filename)
+            $("#post_comment input[name = '[base64_media_item]media_data']").val(file.data)
         }else{
             window.alert("Please limit your upload to 10MB and one of the following file types:\n\nImages: .png, .gif, .jpeg, or .jpg\n\nVideos: .avi, .mpeg, .mp4, quicktime, or .webm");
             uploadSuccess = false;
@@ -1145,7 +1145,7 @@ function submitComment(){
             newComment = L.marker()
             $("input#commentOverlay").prop('checked', true)
         }
-        $("form#post_comment input").val("")
+        $("form#post_comment input:not([name='[comment]project_id'])").val("")
         $("form#post_comment textarea").val("")
         $("form#post_comment input[type='checkbox']").prop("checked", false)
         commentFiles = [];
